@startuml
class viewer.View3DFrame {
- void initComponents()
}
class viewer.ScheduledPanelPainting {
+ {static} long CALLING_TIME
+ {static} long INIT_DELAY
+ {static} String VERTEX_URL
+ {static} String EDGE_URL
+ {static} String PARAMETER_URL
+ {static} float THETA_SPEED
~ float theta
~ View3DPanel panel
~ ViewService viewService
- RestTemplate restTemplate
+ void setup()
+ void calculate()
- void setPanelFromRestEndPointData()
- void restReadVertices()
- void restReadEdges()
- void restReadParameter()
- void setDummyPanelData()
}
class viewer.View3DPanel {
+ {static} int VERTEX_RADIUS
+ {static} Color VERTEX_COLOR
+ {static} Color LINE_COLOR
- List<Dot2D> vertices
- List<Line2D> edges
+ void paint(Graphics)
- void drawLines(Graphics)
- void drawVertices(Graphics)
}
class viewer.ViewApplication {
- View3DFrame frame
- View3DPanel panel
+ {static} void main(String[])
+ CommandLineRunner runGame()
}


viewer.JFrame <|-- viewer.View3DFrame
viewer.JPanel <|-- viewer.View3DPanel
@enduml